config/api-test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-test-deployment
  labels:
    app: api-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-test
  template:
    metadata:
      labels:
        app: api-test
    spec:
      containers:
      - name: api-test
        image: burakasl/kubernetes-test:1.1
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "200m"
            memory: "512Mi"
          limits:
            cpu: "400m"
            memory: "1024Mi"
