config/api-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-test-service
spec:
  selector:
    app: api-test
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30000
  type: LoadBalancer
