config/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  selector:
    app: rabbitmq-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
