config/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: kubernetes.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-test-service
            port:
              number: 80
